fixed open in new tab icon visible on hover

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -317,6 +317,14 @@ p {
   padding-bottom: 0.5rem;
 }
 
+.external-link img {
+  content: url('../assets/images/buttons/external-link_black.svg');
+}
+
+.external-link:hover img {
+  content: url('../assets/images/buttons/external-link_green.svg');
+}
+
 /* CHECKBOX-STYLES */
 .filter-wrap {
   // float: left;
